--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Resume</title>
 </head>
 
-<body style="background-color: #FDEFEF6;">
+<body style="background-color: #DEFEF6;">
   <!-- Header -->
   <section id="header">
     <div class="header container">
