--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Resume</title>
 </head>
 
-<body style="background-color: #DEFEF6;">
+<body style="background-color: #fDEFEF;"> 
   <!-- Header -->
   <section id="header">
     <div class="header container">
@@ -44,14 +44,12 @@
         <h1>Hello, <span></span></h1>
         <h1>My name is <span></span></h1>
         <h1>Naman Ahuja<span></span></h1>
-      <!-- <p style="font-weight: 600; font-color: red;">Technical Executive,Vision Cse</p> -->
+
       </div>
     </div>
   </section>
-  <!-- End Hero Section  -->
 
 
-  <!-- mine Section -->
   <section id="mine">
     <div class="mine container">
       <br><br><br><hr>
@@ -76,7 +74,7 @@
 
           </div>
         </div>
-<!-- target - opens in a new window -->
+
         <div class="mine-item">
           <div class="icon"><img src="images/download.png" /></div>
           <div class="mine-info">
@@ -89,7 +87,7 @@
       <br><br><br>  <br><br><br><hr>
     </div>
   </section>
-  <!-- End mine Section -->
+
 <section id="services">
     <div class="services container">
       <div class="service-top">
@@ -128,10 +126,8 @@
 <br><br><br><br><br> <hr>
     </div>
   </section>
-  <!-- End Service Section -->
+ 
 
-
-  <!-- Contact Section -->
   <section id="contact">
     <div class="contact container">
       <div>
@@ -165,9 +161,8 @@
   <br><br><br>  <br><br><br><hr>
     </div>
   </section>
-  <!-- End Contact Section -->
 
-  <!-- Footer -->
+
   <section id="footer">
     <div class="footer container">
       <div class="brand">
