--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Resume</title>
 </head>
 
-<body style="background-color: #fDEFEF;"> 
+<body style="background-color: #F4F9F9"> 
   <!-- Header -->
   <section id="header">
     <div class="header container">
