--- a/index.html
+++ b/index.html
@@ -115,11 +115,15 @@
           <p>Scored 93% marks in the class 12 th board CBSE exams.</p>
            </div>
 
-          <div class="service-item">
-          <div class="icon"><img src="images/download (3).png" /></div>
-          <a href="http://www.kvpy.iisc.ernet.in/main/index.htm" target="_blank"><h2>Githam-university <br><br> </h2></a>
-          <p>Got till semi-finale round of the IDeAthon-2021, at Githam university. </p>
-        </div>
+           <div class="service-item">
+            <div class="icon"><img src="images/download (3).png" /></div>
+            <a href="http://www.kvpy.iisc.ernet.in/main/index.htm" target="_blank"><h2>Personal traits<br><br> </h2></a>
+            <p>
+               Always energetic and eager to learn new skills. <br>
+               A clear effective communicator with openess in thoughts and ideology. <br>
+               A team player working in a synerguc way towards a shared goal.
+            </p>
+          </div>
 
 
       </div>
