--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
            </div>
 
            <div class="service-item">
-            <div class="icon"><img src="images/download (3).png" /></div>
+            <div class="icon"><img src="images/career.jpg" /></div>
             <a href="http://www.kvpy.iisc.ernet.in/main/index.htm" target="_blank"><h2>Personal traits<br><br> </h2></a>
             <p>
                Always energetic and eager to learn new skills. <br>
