--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <p>
                Always energetic and eager to learn new skills. <br>
                A clear effective communicator with openess in thoughts and ideology. <br>
-               A team player working in a synerguc way towards a shared goal.
+               A team player working in a synergic way towards a shared goal.
             </p>
           </div>
 
