--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Resume</title>
 </head>
 
-<body style="background-color: #F4F9F9"> 
+<body style="background-color: #F4F9F9">
   <!-- Header -->
   <section id="header">
     <div class="header container">
@@ -44,7 +44,7 @@
         <h1>Hello, <span></span></h1>
         <h1>My name is <span></span></h1>
         <h1>Naman Ahuja<span></span></h1>
-
+ <span> <img class="h" src="images/thtsme.jpg" alt=""> </span>
       </div>
     </div>
   </section>
@@ -79,7 +79,7 @@
           <div class="icon"><img src="images/download.png" /></div>
           <div class="mine-info">
             <h1>Interests</h1>
-            <h2> Web Developement and competitive programming are the things that are holding my interest currently.I am skilled in <b> <em> C, C++, HTML, CSS , python(beginner) </em> </b>exploring new things everyday. Other than that I am person always ready to talk about music and Sci-fi theories. </h2>
+            <h2> Web Developement and competitive programming are the things that are holding my interest currently.I am skilled in <b> <em> C, C++, HTML, CSS , python(beginner) </em> </b>3exploring new things everyday. Other than that I am person always ready to talk about music and Sci-fi theories. </h2>
           </div>
         </div>
 
@@ -130,7 +130,7 @@
 <br><br><br><br><br> <hr>
     </div>
   </section>
- 
+
 
   <section id="contact">
     <div class="contact container">
