--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="icon"><img src="images/download.png" /></div>
           <div class="mine-info">
             <h1>Interests</h1>
-            <h2> Web Developement and competitive programming are the things that are holding my interest currently.I am skilled in <b> <em> C, C++, HTML, CSS , python(beginner) </em> </b>3exploring new things everyday. Other than that I am person always ready to talk about music and Sci-fi theories. </h2>
+            <h2> Web Developement and competitive programming are the things that are holding my interest currently.I am skilled in <b> <em> C, C++, HTML, CSS , python(beginner) </em> </b>exploring new things everyday. Other than that I am person always ready to talk about music and Sci-fi theories. </h2>
           </div>
         </div>
 
