--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="service-bottom">
         <div class="service-item">
           <div class="icon"><img src="images/c.jfif" /></div>
-          <a href="http://www.kvpy.iisc.ernet.in/main/index.htm" target="_blank"><h2>Hackerrank 4-star iN C </h2></a>
+          <a href=" target="_blank"><h2>Hackerrank 4-star iN C </h2></a>
           <p>Got a 4 star rating in C language on the well known platform of hackerrank. </p>
         </div>
 
@@ -111,13 +111,13 @@
 
         <div class="service-item">
           <div class="icon"><img src="images/cbse.png" /></div>
-          <a href="https://ncert.nic.in/national-talent-examination.php" target="_blank"><h2>XII boards <br><br> </h2></a>
+          <a href="" target="_blank"><h2>XII boards <br><br> </h2></a>
           <p>Scored 93% marks in the class 12 th board CBSE exams.</p>
            </div>
 
            <div class="service-item">
             <div class="icon"><img src="images/career.jpg" /></div>
-            <a href="http://www.kvpy.iisc.ernet.in/main/index.htm" target="_blank"><h2>Personal traits<br><br> </h2></a>
+            <a href="" target="_blank"><h2>Personal traits<br><br> </h2></a>
             <p>
                Always energetic and eager to learn new skills. <br>
                A clear effective communicator with openess in thoughts and ideology. <br>
