--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1>Hello, <span></span></h1>
         <h1>My name is <span></span></h1>
         <h1>Naman Ahuja<span></span></h1>
- <span> <img class="h" src="images/thtsme.jpg" alt=""> </span>
+ <span> <img class="h" src="images/mydp.jpg" alt=""> </span>
       </div>
     </div>
   </section>
