--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="nav-list">
           <!-- <div class="me"> -->
-            <div class="bar"></div>
+            <div class="bar">
           <!-- </div> -->
           <ul>
             <li><a href="#hero" data-after="Home">Home</a></li>
@@ -30,12 +30,25 @@
             <li><a href="#services" data-after="Achievements">Skills & Achievements</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
           </ul>
+          <span class="menuicon"><img src="images/menuicon.jpg" alt=""></span>
+        </div>
         </div>
       </div>
+      
+    
+    </div>
+    <div class="hamburger-hide">
+      <ul>
+        <li><a href="#hero" data-after="Home">Home</a></li>
+        <li><a href="#mine" data-after="About">About</a></li>
+        <li><a href="#services" data-after="Achievements">Skills & Achievements</a></li>
+        <li><a href="#contact" data-after="Contact">Contact</a></li>
+      </ul>
     </div>
   </section>
   <!-- End Header -->
 
+  
 
   <!-- Hero Section  -->
   <section id="hero">
@@ -190,7 +203,7 @@
       <p>Copyright © 2021 Naman ahuja. All rights reserved</p>
     </div>
   </section>
-
+<script src="script.js"></script>
 </body>
 
 </html>
